--- a/Numerik Project/.classpath
+++ b/Numerik Project/.classpath
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <classpath>
-	<classpathentry excluding="numerik/calc_test/MathLib_TestFixture.java" kind="src" path="src"/>
+	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.junit.JUNIT_CONTAINER/4"/>
 	<classpathentry kind="lib" path="libs/jlatexmath-0.9.7.jar"/>
 	<classpathentry kind="lib" path="libs/junit-4.10.jar"/>
